# docRestoration

./: .env.example  .gitignore  CLOUD_DEPLOYMENT.md  Dockerfile.dev  FLEXIBLE_TRAINING_CONFIG.md  FLEXIBLE_TRAINING_SUMMARY.md  MANIFEST.md  QUICKSTART.md  README.md  README_CLOUD.md  dependencies.txt  docker-compose-commands.sh  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  quick_start_training.sh  runpod-deployment.md  test_config.sh  verify_cloud_deployment.sh
.github/: copilot-instructions.md
catatan/: BUGFIX_HF_TRANSFER.md  CHANGELOG_TRAIN32_DEFAULT.md  CLOUD_OPTIMIZATION.md  DOCKER_COMPOSE_CLOUD_SUMMARY.md  DebugCudnnRnnMaskError.md  EXPERIMENT_SERIES_README.md  GRID_SEARCH_REPORT.md  HANDOVER_PIVOT_FEATURE_LOSS.md  LOG_CTC_ANNEALING_STRATEGY.md  PIVOT_RECOGNITION_FEATURE_LOSS.md  README.md  RENCANA_KONTINGENSI_POST_EXPERIMENT1.md  SURAT_TUGAS_FULL_TRAINING.md  StrategiOptimalisasi.md  TugasGridSearch.md  UjiIterativeRefinement.md  ablation_study_plan.md  agendaKerja.md  copilot_glm_handover_completion_report.md  epoch_10_error_analysis.md  hasilKontesFinal.md  hasil_run_2e41a952e57a47519d4598d9d2be1afd.md  implementasiContrastive.md  implementasiContrastive_result.md  implementasiNovelty.md  kontesFinal.md  laporanStudiAblation_BaselineVsIterative_20251013.md  perbaikanNovelty.md  perbandingan2Metode.md  potensiNovelty.md  rencana_aksi_bayesian_optimization.md  tugasPerbaikanGenerator.md
configs/: EXAMPLE_resume_training.json  ablation_A_pixel_only.json  ablation_B_pixel_adv.json  ablation_C_pixel_ctc.json  ablation_D_no_recfeat.json  baseline_current.json  experiment1_ctc_annealing_low.json  experiment2_ctc_medium.json  experiment3_moderate_discriminator.json  experiment3_strong_adversarial.json  experiment4_balanced_optimal.json  experiment_15epochs_vgg_perceptual.json  experiment_A1_A2_A3_extended_training.json  experiment_strong_discriminator.json  fast_fail_adaptive_3epochs.json  fast_fail_adaptive_5epochs.json  fast_fail_baseline_5epochs.json  full_training_baseline_25epochs.json  optimized_balanced_losses.json  (+7 more)
docs/: README.md  (+4 more)
(+233 files in other folders)
